# independent_stdint

./: .gitignore  CMakeLists.txt  README.md  independent_int.c  independent_int.h
example/: CMakeLists.txt  example.c  example.cpp
test/: CMakeLists.txt  test_value_x.c
